[FEAT]: Adicionando hp_cost em abilities
- Adicionado hp cost em schemas e types de abilities
- atualizado swagger para refletir mudanças
