# backend/src/resources/abilities/abilities.schemas.ts
@@ -10,6 +10,7 @@ export const createAbilitiesSchema = Joi.object<CreateAbilitiesDTO>({
     cost_type: Joi.string().valid(...Object.values(CostType)).required(),
     mp_cost: Joi.number().integer().min(0).required(),
     tp_cost: Joi.number().integer().min(0).required(),
+    hp_cost: Joi.number().integer().min(0).required(),
     cooldown_value: Joi.number().integer().min(0).required(),
 });
 
@@ -20,5 +21,6 @@ export const updateAbilitiesSchema = Joi.object<UpdateAbilitiesDTO>({
     cost_type: Joi.string().valid(...Object.values(CostType)),
     mp_cost: Joi.number().integer().min(0),
     tp_cost: Joi.number().integer().min(0),
+    hp_cost: Joi.number().integer().min(0),
     cooldown_value: Joi.number().integer().min(0),
 }).min(1);
